--- a/src/views/productAdd/productAdd.html
+++ b/src/views/productAdd/productAdd.html
@@ -72,7 +72,7 @@
               <div>
                 <label for="categorySelectBox">카테고리</label>
                 <input id="Bcategory" type="text" readonly>
-                <input id="Scategory" type="text" readonly>
+                <input id="Scategory" name="Scategory" type="text" readonly>
                 <button type='button' id="modal_btn">모달창아 나와랏</button>
                 <div class="black_bg"></div>
                 <div class="modal_wrap">
