--- a/src/views/products/products.html
+++ b/src/views/products/products.html
@@ -11,19 +11,23 @@
 			sizes="16x16"
 			href="/elice-rabbit-favicon.png"
 		/>
-		<!-- 구글폰트, 아이콘 -->
+
 		<link rel="preconnect" href="https://fonts.googleapis.com" />
 		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
 		<link
-			href="https://fonts.googleapis.com/css2?family=Nanum+Gothic:wght@400;700;800&family=Noto+Sans+KR:wght@100;300;400;500;700;900&display=swap"
+			href="https://fonts.googleapis.com/css2?family=Libre+Bodoni:wght@400;700&family=Nanum+Gothic:wght@400;700;800&family=Playfair+Display:wght@400;500;600;700;800;900&family=Prata&display=swap"
 			rel="stylesheet"
 		/>
-		<link
-			href="https://fonts.googleapis.com/css?family=Material+Icons|Material+Icons+Outlined|Material+Icons+Two+Tone|Material+Icons+Round|Material+Icons+Sharp"
-			rel="stylesheet"
-		/>
+
 		<!-- IONICONS -->
-		<script src="https://unpkg.com/ionicons@5.2.3/dist/ionicons.js"></script>
+		<script
+			type="module"
+			src="https://unpkg.com/ionicons@5.2.3/dist/ionicons/ionicons.esm.js"
+		></script>
+		<script
+			nomodule=""
+			src="https://unpkg.com/ionicons@5.2.3/dist/ionicons/ionicons.js"
+		></script>
 
 		<!-- 커스텀 css, js -->
 		<link rel="stylesheet" href="products.css" />
@@ -58,6 +62,9 @@
 									<div class="nav__link active">
 										<a href="/" class="nav_name">Home</a>
 									</div>
+									<div class="nav__link active">
+										<a href="/ranking" class="nav_name">Best</a>
+									</div>
 								</div>
 							</div>
 						</nav>
@@ -70,7 +77,7 @@
 						<ul id="submenu">
 							<li>
 								<a href="/cart" aria-current="page">
-									<span class="material-icons-outlined"> shopping_cart </span>
+									<ion-icon name="bag-handle-outline"></ion-icon>
 								</a>
 							</li>
 						</ul>
