--- a/src/views/ranking/ranking.css
+++ b/src/views/ranking/ranking.css
@@ -1,30 +1,27 @@
-.container {
-	margin: 0 auto 0;
-	padding: 80px 0 40px;
-}
 .rankedproducts {
 	width: 100%;
-}
-.rankedproducts .title h1 {
-	font-weight: 400;
-	text-align: center;
 }
 .rankedproducts .inputProduct {
 	display: flex;
 	flex-wrap: wrap;
 	align-items: center;
-	margin: 0 auto;
-	justify-content: center;
 }
+
+.rankedproducts .inputProduct #productImage {
+	cursor: pointer;
+	height: 320px;
+	width: 220px;
+	object-fit: cover;
+}
+.rankedproducts .inputProduct #productDescription {
+	cursor: pointer;
+}
+
 .rankedproducts .product-item {
 	display: flex;
 	flex-direction: column;
 	justify-content: center;
 	padding: 0 10px 60px 10px;
-}
-.rankedproducts .product-item #productImage {
-	height: 220px;
-	width: 220px;
 }
 .rankedproducts .product-item .description {
 	display: flex;
@@ -48,21 +45,4 @@
 .rankedproducts .button {
 	margin: auto;
 	display: block;
-}
-
-#to-top {
-	width: 44px;
-	height: 44px;
-	border-radius: 50%;
-	background-color: #fff;
-	color: #333;
-	border: 2px solid #e5e5e5;
-	cursor: pointer;
-	display: flex;
-	justify-content: center;
-	align-items: center;
-	position: fixed;
-	bottom: 30px;
-	right: 30px;
-	z-index: 9;
 }
