--- a/src/views/cart/cart.html
+++ b/src/views/cart/cart.html
@@ -26,7 +26,7 @@
   ></script>
   <link rel="stylesheet" href="cart.css">
   <script src="cart.js" type="module" defer></script>
-  <title>쇼핑-8팀</title>
+  <title>StoreStore</title>
 </head>
   <body>
     <!-- 헤더 -->
