--- a/src/views/home/home.html
+++ b/src/views/home/home.html
@@ -3,7 +3,7 @@
 	<head>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
-		<title>쇼핑-n팀</title>
+		<title>StoreStore</title>
 		<!-- 아이콘 -->
 		<link
 			rel="icon"
@@ -37,10 +37,10 @@
 			src="https://unpkg.com/ionicons@5.2.3/dist/ionicons/ionicons.js"
 		></script>
 		<!-- 커스텀 css, js -->
-		<link rel="stylesheet" href="home.css" />
 		<link rel="stylesheet" href="../css/common.css" />
-		<script src="home.js" type="module" defer></script>
 		<script src="../nav.js" type="module" defer></script>
+		<link rel="stylesheet" href="home.css" />
+		<script src="home.js" type="module" defer></script>
 	</head>
 	<body>
 		<!-- 헤더 -->
