--- a/src/views/payment/payment.html
+++ b/src/views/payment/payment.html
@@ -25,7 +25,7 @@
     crossorigin="anonymous"
   ></script>
   <link rel="stylesheet" href="payment.css">
-  <title>쇼핑-8팀</title>
+  <title>StoreStore</title>
 </head>
   <body>
     <!-- 헤더 -->
