--- a/src/views/paymentComplete/paymentComplete.html
+++ b/src/views/paymentComplete/paymentComplete.html
@@ -26,7 +26,7 @@
   <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
   <link rel="stylesheet" href="paymentComplete.css">
   <script src="paymentComplete.js" type="module" defer></script>
-  <title>쇼핑-8팀</title>
+  <title>StoreStore</title>
 </head>
   <body>
     <!-- 헤더 -->
