--- a/src/views/login/login.html
+++ b/src/views/login/login.html
@@ -32,7 +32,6 @@
     <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
 
     <!-- 커스텀 css, js -->
-    <script src="../../nav.js" type="module" defer></script>
     <link rel="stylesheet" href="../../css/common.css" />
     <link rel="stylesheet" href="login.css" />
     <script src="login.js" type="module" defer></script>
@@ -45,45 +44,11 @@
     </div>
     <div class="container-box">
       <div class="headerLeft">
-        <div class="nav__toggle" id="nav-toggle">
-          <div class="sidebarBtn">
-            <ion-icon name="menu-outline"></ion-icon>
-          </div>
-          <div class="sidebarBtn hidden-Toggle">
-            <ion-icon name="close-outline"></ion-icon>
-          </div>
-          <span class="sidebar-text">Menu</span>
-        </div>
-        <div class="l-navbar" id="categoryNavbar">
-          <nav class="nav">
-            <div>
-              <div class="nav__brand">
-                <div class="nav__brand">Category</div>
-              </div>
-              <div class="nav__list" id="nav-list">
-                <div class="nav__link active">
-                  <a href="/" class="nav_name">Home</a>
-                </div>
-                <div class="nav__link active">
-                  <a href="/ranking" class="nav_name">Best</a>
-                </div>
-              </div>
-            </div>
-          </nav>
-        </div>
+
       </div>
       <h1 class="logo"><a href="/">StoreStore</a></h1>
       <div class="headerRight">
         <!-- 장바구니 -->
-        <div id="sub-category">
-          <ul id="submenu">
-            <li>
-              <a href="/cart" aria-current="page">
-                <ion-icon name="bag-handle-outline"></ion-icon>
-              </a>
-            </li>
-          </ul>
-        </div>
       </div>
     </div>
   </header>
@@ -122,6 +87,9 @@
           로그인하기
         </button>
       </form>
+    </div>
+    <div class="passwordFind-box">
+      <button class="passwordFind">비밀번호 찾기</button>
     </div>
   </body>
 </html>
