--- a/src/views/admin/admin.html
+++ b/src/views/admin/admin.html
@@ -34,6 +34,8 @@
     <!-- 카카오 OAuth -->
     <script src="https://developers.kakao.com/sdk/js/kakao.js"></script>
     <!-- 커스텀 css, js -->
+      <!-- sweetalert -->
+  <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
     <script src="../../nav.js" type="module" defer></script>
     <link rel="stylesheet" href="../../css/common.css" />
     <link rel="stylesheet" href="admin.css" />
