--- a/src/views/mypage/mypage.html
+++ b/src/views/mypage/mypage.html
@@ -33,6 +33,7 @@
     <script src="https://accounts.google.com/gsi/client" async defer></script>
     <!-- 카카오 OAuth -->
     <script src="https://developers.kakao.com/sdk/js/kakao.js"></script>
+    <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
     <!-- 커스텀 css, js -->
     <script src="../../nav.js" type="module" defer></script>
     <link rel="stylesheet" href="../../css/common.css" />
