--- a/src/views/userinfo/userinfo.html
+++ b/src/views/userinfo/userinfo.html
@@ -31,6 +31,7 @@
 		></script>
 
 		<!-- 커스텀 css, js -->
+        <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
 		<link rel="stylesheet" href="../../css/common.css" />
 		<script src="../../nav.js" type="module" defer></script>
 		<link rel="stylesheet" href="userinfo.css" />
