--- a/src/views/productAdd/productAdd.css
+++ b/src/views/productAdd/productAdd.css
@@ -15,12 +15,12 @@
     display: none;
     position: fixed;
     content: "";
-    width: 100%;
-    height: 100%;
+    width: 100vw;
+    height: 100vh;
     background-color: rgba(0,0,0,0.5);
     top : 0;
     left : 0;
-    z-index: 50;
+    z-index: 100;
 }
 .modal_close{
     width: 26px;
