--- a/src/views/order/order.html
+++ b/src/views/order/order.html
@@ -8,8 +8,8 @@
 		<link
 			rel="icon"
 			type="image/png"
-			sizes="16x16"
-			href="/elice-rabbit-favicon.png"
+			sizes="32x32"
+			href="/StoreStore-favicon.png"
 		/>
 		<link rel="preconnect" href="https://fonts.googleapis.com" />
 		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
