--- a/src/views/cart/cart.html
+++ b/src/views/cart/cart.html
@@ -1,106 +1,131 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <!-- 아이콘 -->
-  <link
-    rel="icon"
-    type="image/png"
-    sizes="16x16"
-    href="/elice-rabbit-favicon.png"
-  />
-  <!-- bulma css 관련 -->
-  <link
-    rel="stylesheet"
-    href="https://cdn.jsdelivr.net/npm/bulma@0.9.3/css/bulma.min.css"
-  />
-  <!-- sweetalert -->
-  <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
-  <!-- 폰트 어썸: 아이콘 -->
-  <script
-    defer
-    src="https://kit.fontawesome.com/7630448495.js"
-    crossorigin="anonymous"
-  ></script>
-  <link rel="stylesheet" href="cart.css">
-  <script src="cart.js" type="module" defer></script>
-  <title>StoreStore</title>
-</head>
-  <body>
-    <!-- 헤더 -->
-    <nav class="navbar" role="navigation" aria-label="main navigation">
-      <div class="container mt-3">
-        <div class="navbar-brand">
-          <a class="navbar-item" href="/">
-            <img src="/elice-rabbit.png" width="30" height="30" />
-            <span class="has-text-link">쇼핑-n팀</span>
-          </a>
+	<head>
+		<meta charset="UTF-8" />
+		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
+		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+		<title>StoreStore</title>
+		<!-- 아이콘 -->
+		<link
+			rel="icon"
+			type="image/png"
+			sizes="32x32"
+			href="/StoreStore-favicon.png"
+		/>
+		<!-- sweetalert -->
+		<script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
 
-          <a
-            role="button"
-            class="navbar-burger"
-            aria-label="menu"
-            aria-expanded="false"
-            data-target="navbarBasicExample"
-          >
-            <span aria-hidden="true"></span>
-            <span aria-hidden="true"></span>
-            <span aria-hidden="true"></span>
-          </a>
-        </div>
+		<link rel="preconnect" href="https://fonts.googleapis.com" />
+		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+		<link
+			href="https://fonts.googleapis.com/css2?family=Libre+Bodoni:wght@400;700&family=Nanum+Gothic:wght@400;700;800&family=Playfair+Display:wght@400;500;600;700;800;900&family=Prata&display=swap"
+			rel="stylesheet"
+		/>
 
-          <div class="navbar-end breadcrumb my-auto" aria-label="breadcrumbs">
-            <ul id="navbar">
-              <li>
-                <a href="/cart" aria-current="page">
-                  <span class="icon">
-                    <i class="fas fa-cart-shopping"></i>
-                  </span>
-                  <span>카트</span>
-                </a>
-              </li>
-            </ul>
-          </div>
-        </div>
-      </div>
-    </nav>
-    <section class="section">
-      <div class="container">
-        <div class="cart-header">
-          <div class="title">
-            <p class="is-size-2">장바구니</p>
-          </div>
-          <div class="subtitle">
-            <p class="is-size-6">
-              &gt; &nbsp; 주문결제 &nbsp; &gt; &nbsp;주문완료
-            </p>
-          </div>
-        </div>
-        <div  class="cart-product-box hide">
-          <div class="tit-box">
-            <div class="choice-all-btn checkbox-btn">
-              <input type="checkbox" id="check_all" checked="true">
-            </div>
-            <p class="product-info-cell">상품정보</p> 
-            <p class="product-option-cell">옵션</p> 
-            <p class="product-price-cell">상품금액</p>
-          </div> 
-        </div>
-        <div>
-          <p class="hide empty">장바구니가 비어있습니다. 제품을 장바구니에 추가해주세요.</p>
-        </div>
-        <div class="delete_btn hide">
-          <button class="delete_all">전체 삭제</button>
-          <button class="delete_choice">선택 삭제</button>
-        </div>
-        <div class="payment-price-info hide">
-        </div>
-        <div class="order-btn-line hide">
-          <button class="order-btn">주문하기</button>
-        </div>
-      </div>
-    </section>
-  </body>
+		<!-- IONICONS -->
+		<script
+			type="module"
+			src="https://unpkg.com/ionicons@5.2.3/dist/ionicons/ionicons.esm.js"
+		></script>
+		<script
+			nomodule=""
+			src="https://unpkg.com/ionicons@5.2.3/dist/ionicons/ionicons.js"
+		></script>
+
+		<!-- 커스텀 css, js -->
+		<link rel="stylesheet" href="../../css/common.css" />
+		<script src="../../nav.js" type="module" defer></script>
+		<link rel="stylesheet" href="cart.css" />
+		<script src="cart.js" type="module" defer></script>
+	</head>
+	<body>
+		<!-- 헤더 -->
+		<header>
+			<div class="sub-menu">
+				<!-- 회원가입,로그인 -->
+				<ul id="navbar" class="navbar"></ul>
+			</div>
+			<div class="container-box">
+				<div class="headerLeft">
+					<div class="nav__toggle" id="nav-toggle">
+						<div class="sidebarBtn">
+							<ion-icon name="menu-outline"></ion-icon>
+						</div>
+						<div class="sidebarBtn hidden-Toggle">
+							<ion-icon name="close-outline"></ion-icon>
+						</div>
+						<span class="sidebar-text">Menu</span>
+					</div>
+					<div class="l-navbar" id="categoryNavbar">
+						<nav class="nav">
+							<div>
+								<div class="nav__brand">
+									<div class="nav__brand">Category</div>
+								</div>
+								<div class="nav__list" id="nav-list">
+									<div class="nav__link active">
+										<a href="/" class="nav_name">Home</a>
+									</div>
+									<div class="nav__link active">
+										<a href="/ranking" class="nav_name">Best</a>
+									</div>
+								</div>
+							</div>
+						</nav>
+					</div>
+				</div>
+				<h1 class="logo"><a href="/">StoreStore</a></h1>
+				<div class="headerRight">
+					<!-- 장바구니 -->
+					<div id="sub-category">
+						<ul id="submenu">
+							<li>
+								<a href="/cart" aria-current="page">
+									<ion-icon name="bag-handle-outline"></ion-icon>
+								</a>
+							</li>
+						</ul>
+					</div>
+				</div>
+			</div>
+		</header>
+
+		<section class="section">
+			<div class="container">
+				<div class="cart-header">
+					<div class="title">
+						<p class="is-size-2">장바구니</p>
+					</div>
+					<div class="subtitle">
+						<p class="is-size-6">
+							&gt; &nbsp; 주문결제 &nbsp; &gt; &nbsp;주문완료
+						</p>
+					</div>
+				</div>
+				<div class="cart-product-box hide">
+					<div class="tit-box">
+						<div class="choice-all-btn checkbox-btn">
+							<input type="checkbox" id="check_all" checked="true" />
+						</div>
+						<p class="product-info-cell">상품정보</p>
+						<p class="product-option-cell">옵션</p>
+						<p class="product-price-cell">상품금액</p>
+					</div>
+				</div>
+				<div>
+					<p class="hide empty">
+						장바구니가 비어있습니다. 제품을 장바구니에 추가해주세요.
+					</p>
+				</div>
+				<div class="delete_btn hide">
+					<button class="delete_all">전체 삭제</button>
+					<button class="delete_choice">선택 삭제</button>
+				</div>
+				<div class="payment-price-info hide"></div>
+				<div class="order-btn-line hide">
+					<button class="order-btn">주문하기</button>
+				</div>
+			</div>
+		</section>
+	</body>
 </html>
