--- a/src/views/paymentComplete/paymentComplete.html
+++ b/src/views/paymentComplete/paymentComplete.html
@@ -1,110 +1,133 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <!-- 아이콘 -->
-  <link
-    rel="icon"
-    type="image/png"
-    sizes="16x16"
-    href="/elice-rabbit-favicon.png"
-  />
-  <!-- bulma css 관련 -->
-  <link
-    rel="stylesheet"
-    href="https://cdn.jsdelivr.net/npm/bulma@0.9.3/css/bulma.min.css"
-  />
-  <!-- 폰트 어썸: 아이콘 -->
-  <script
-    defer
-    src="https://kit.fontawesome.com/7630448495.js"
-    crossorigin="anonymous"
-  ></script>
-  <!-- sweetalert -->
-  <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
-  <link rel="stylesheet" href="paymentComplete.css">
-  <script src="paymentComplete.js" type="module" defer></script>
-  <title>StoreStore</title>
-</head>
-  <body>
-    <!-- 헤더 -->
-    <nav class="navbar" role="navigation" aria-label="main navigation">
-      <div class="container mt-3">
-        <div class="navbar-brand">
-          <a class="navbar-item" href="/">
-            <img src="/elice-rabbit.png" width="30" height="30" />
-            <span class="has-text-link">쇼핑-n팀</span>
-          </a>
+	<head>
+		<meta charset="UTF-8" />
+		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
+		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+		<title>StoreStore</title>
+		<!-- 아이콘 -->
+		<link
+			rel="icon"
+			type="image/png"
+			sizes="32x32"
+			href="/StoreStore-favicon.png"
+		/>
+		<!-- sweetalert -->
+		<script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
 
-          <a
-            role="button"
-            class="navbar-burger"
-            aria-label="menu"
-            aria-expanded="false"
-            data-target="navbarBasicExample"
-          >
-            <span aria-hidden="true"></span>
-            <span aria-hidden="true"></span>
-            <span aria-hidden="true"></span>
-          </a>
-        </div>
+		<link rel="preconnect" href="https://fonts.googleapis.com" />
+		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+		<link
+			href="https://fonts.googleapis.com/css2?family=Libre+Bodoni:wght@400;700&family=Nanum+Gothic:wght@400;700;800&family=Playfair+Display:wght@400;500;600;700;800;900&family=Prata&display=swap"
+			rel="stylesheet"
+		/>
 
-          <div class="navbar-end breadcrumb my-auto" aria-label="breadcrumbs">
-            <ul id="navbar">
-              <li>
-                <a href="/cart" aria-current="page">
-                  <span class="icon">
-                    <i class="fas fa-cart-shopping"></i>
-                  </span>
-                  <span>카트</span>
-                </a>
-              </li>
-            </ul>
-          </div>
-        </div>
-      </div>
-    </nav>
+		<!-- IONICONS -->
+		<script
+			type="module"
+			src="https://unpkg.com/ionicons@5.2.3/dist/ionicons/ionicons.esm.js"
+		></script>
+		<script
+			nomodule=""
+			src="https://unpkg.com/ionicons@5.2.3/dist/ionicons/ionicons.js"
+		></script>
 
-    <main>
-        <h1 class="is-size-2">주문이 완료되었습니다.</h1>
-        <article class="order-article box">
-          <div class="order-box content">
-            <p class="order-list title-content">주문 내역</p>
-            <div class="order-history result">
-              <div class="order-name-box content">
-                <p class="order-name-title title-content">이름</p>
-                <p class="order-name result"></p>
-              </div>
-              <div class="order-adress-box content">
-                <p class="order-adress-title title-content">배송지</p>
-                <p class="order-adress result"></p>
-              </div>
-              <div class="order-phone-box content">
-                <p class="order-phone-title title-content">전화번호</p>
-                <p class="order-phone result"></p>
-              </div>
-              <div class="order-request-box content">
-                <p class="order-request-title title-content">요청사항</p>
-                <p class="order-request result"></p>
-              </div>
-              <div class="order-products-box content">
-                <p class="order-products-title title-content">주문 물품</p>
-                <p class="order-products result"></p>
-              </div>
-              <div class="order-price-box content">
-                <p class="order-price-title title-content">가격</p>
-                <p class="order-price result"></p>
-              </div>
-              <div class="order-status-box content">
-                <p class="order-status-title title-content">주문 상태</p>
-                <p class="order-status result"></p>
-              </div>
-            </div>
-          </div>
-        </article>
-        <button class="home-btn">다른 상품 보러가기</button>
-    </main>
-  </body>
+		<!-- 커스텀 css, js -->
+		<link rel="stylesheet" href="../../css/common.css" />
+		<script src="../../nav.js" type="module" defer></script>
+		<link rel="stylesheet" href="paymentComplete.css" />
+		<script src="paymentComplete.js" type="module" defer></script>
+	</head>
+	<body>
+		<!-- 헤더 -->
+		<header>
+			<div class="sub-menu">
+				<!-- 회원가입,로그인 -->
+				<ul id="navbar" class="navbar"></ul>
+			</div>
+			<div class="container-box">
+				<div class="headerLeft">
+					<div class="nav__toggle" id="nav-toggle">
+						<div class="sidebarBtn">
+							<ion-icon name="menu-outline"></ion-icon>
+						</div>
+						<div class="sidebarBtn hidden-Toggle">
+							<ion-icon name="close-outline"></ion-icon>
+						</div>
+						<span class="sidebar-text">Menu</span>
+					</div>
+					<div class="l-navbar" id="categoryNavbar">
+						<nav class="nav">
+							<div>
+								<div class="nav__brand">
+									<div class="nav__brand">Category</div>
+								</div>
+								<div class="nav__list" id="nav-list">
+									<div class="nav__link active">
+										<a href="/" class="nav_name">Home</a>
+									</div>
+									<div class="nav__link active">
+										<a href="/ranking" class="nav_name">Best</a>
+									</div>
+								</div>
+							</div>
+						</nav>
+					</div>
+				</div>
+				<h1 class="logo"><a href="/">StoreStore</a></h1>
+				<div class="headerRight">
+					<!-- 장바구니 -->
+					<div id="sub-category">
+						<ul id="submenu">
+							<li>
+								<a href="/cart" aria-current="page">
+									<ion-icon name="bag-handle-outline"></ion-icon>
+								</a>
+							</li>
+						</ul>
+					</div>
+				</div>
+			</div>
+		</header>
+
+		<main>
+			<h1 class="is-size-2">주문이 완료되었습니다.</h1>
+			<article class="order-article box">
+				<div class="order-box content">
+					<p class="order-list title-content">주문 내역</p>
+					<div class="order-history result">
+						<div class="order-name-box content">
+							<p class="order-name-title title-content">이름</p>
+							<p class="order-name result"></p>
+						</div>
+						<div class="order-adress-box content">
+							<p class="order-adress-title title-content">배송지</p>
+							<p class="order-adress result"></p>
+						</div>
+						<div class="order-phone-box content">
+							<p class="order-phone-title title-content">전화번호</p>
+							<p class="order-phone result"></p>
+						</div>
+						<div class="order-request-box content">
+							<p class="order-request-title title-content">요청사항</p>
+							<p class="order-request result"></p>
+						</div>
+						<div class="order-products-box content">
+							<p class="order-products-title title-content">주문 물품</p>
+							<p class="order-products result"></p>
+						</div>
+						<div class="order-price-box content">
+							<p class="order-price-title title-content">가격</p>
+							<p class="order-price result"></p>
+						</div>
+						<div class="order-status-box content">
+							<p class="order-status-title title-content">주문 상태</p>
+							<p class="order-status result"></p>
+						</div>
+					</div>
+				</div>
+			</article>
+			<button class="home-btn">다른 상품 보러가기</button>
+		</main>
+	</body>
 </html>
