--- a/src/views/product-detail/product-detail.html
+++ b/src/views/product-detail/product-detail.html
@@ -8,8 +8,8 @@
     <link
       rel="icon"
       type="image/png"
-      sizes="16x16"
-      href="/elice-rabbit-favicon.png"
+			sizes="32x32"
+			href="/StoreStore-favicon.png"
     />
     <!-- sweetalert -->
   <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>  
