--- a/src/views/userinfo/userinfo.html
+++ b/src/views/userinfo/userinfo.html
@@ -9,8 +9,8 @@
 		<link
 			rel="icon"
 			type="image/png"
-			sizes="16x16"
-			href="/elice-rabbit-favicon.png"
+			sizes="32x32"
+			href="/StoreStore-favicon.png"
 		/>
 
 		<link rel="preconnect" href="https://fonts.googleapis.com" />
