사이드바 스크롤

--- a/src/views/home/home.html
+++ b/src/views/home/home.html
@@ -61,11 +61,13 @@
 						<span class="sidebar-text">Menu</span>
 					</div>
 					<div class="l-navbar" id="categoryNavbar">
+						<nav class="navbox">
+							<div class="nav__brand">
+								<div class="nav__brand">Category</div>
+							</div>
+						</nav>
 						<nav class="nav">
 							<div>
-								<div class="nav__brand">
-									<div class="nav__brand">Category</div>
-								</div>
 								<div class="nav__list" id="nav-list">
 									<div class="nav__link active">
 										<a href="/" class="nav_name">Home</a>
@@ -95,7 +97,7 @@
 		</header>
 
 		<!-- 이미지 슬라이더 -->
-		<section class="promotion-swiper">
+		<!-- <section class="promotion-swiper">
 			<div class="promotion">
 				<div class="swiper-container">
 					<div class="swiper-wrapper">
@@ -139,7 +141,10 @@
 					<i class="fa-solid fa-angle-right"></i>
 				</div>
 			</div>
-		</section>
+		</section> -->
+
+		<!-- 메인 -->
+		<section class="main-image"></section>
 
 		<section class="main-product">
 			<div class="title">
