--- a/src/views/css/common.css
+++ b/src/views/css/common.css
@@ -28,6 +28,11 @@ a {
 
 .md.hydrated {
 	font-size: 24px;
+	color: #141414;
+}
+.collapse__link.md.hydrated {
+	font-size: 16px;
+	color: #141414;
 }
 
 section {
@@ -45,10 +50,6 @@ header {
 	position: sticky;
 	z-index: 99;
 	background-color: #fff;
-}
-
-.sub-menu {
-	margin-right: -10px;
 }
 
 .navbar {
@@ -116,7 +117,7 @@ header {
 	cursor: pointer;
 	position: absolute;
 	top: 2.7rem;
-	left: 2.4%;
+	left: 2%;
 	padding-right: 52px;
 }
 
@@ -125,8 +126,8 @@ header {
 }
 
 .sidebar-text {
-	font-size: 14px;
-	padding-left: 32px;
+	font-size: 16px;
+	padding-left: 26px;
 }
 
 /* l NAV */
@@ -138,7 +139,7 @@ header {
 	height: 100vh;
 	background-color: #fff;
 	color: #141414;
-	padding: 1.5rem 1.2% 2rem;
+	padding: 1.5rem 0 2rem 2.4%;
 	transition: 0.5s;
 	z-index: 100;
 }
@@ -149,6 +150,24 @@ header {
 	display: flex;
 	flex-direction: column;
 	justify-content: space-between;
+	overflow-x: hidden;
+	overflow-y: scroll;
+}
+
+/* scroll design  */
+.nav::-webkit-scrollbar {
+	width: 5px;
+}
+/* 막대색 */
+.nav::-webkit-scrollbar-thumb {
+	background-color: #e5e5e5;
+}
+/* 배경색 */
+.nav::-webkit-scrollbar-track {
+	background-color: #fff;
+}
+
+.navbox {
 	overflow: hidden;
 }
 
@@ -162,13 +181,18 @@ header {
 	font-weight: 700;
 }
 
+.nav__list {
+	padding-right: 0.75rem;
+	overflow-y: hidden;
+}
+
 .nav__logo {
 	color: #141414;
 	font-weight: 600;
 }
 
 .nav__link {
-	padding: 0.75rem;
+	padding: 0.75rem 0.75rem 0.75rem 1rem;
 	color: #141414;
 	border-radius: 0.5rem;
 	transition: 0.3s;
