--- a/src/views/products/products.html
+++ b/src/views/products/products.html
@@ -53,11 +53,13 @@
 						<span class="sidebar-text">Menu</span>
 					</div>
 					<div class="l-navbar" id="categoryNavbar">
+						<nav class="navbox">
+							<div class="nav__brand">
+								<div class="nav__brand">Category</div>
+							</div>
+						</nav>
 						<nav class="nav">
 							<div>
-								<div class="nav__brand">
-									<div class="nav__brand">Category</div>
-								</div>
 								<div class="nav__list" id="nav-list">
 									<div class="nav__link active">
 										<a href="/" class="nav_name">Home</a>
