--- a/src/views/userinfo/userinfo.html
+++ b/src/views/userinfo/userinfo.html
@@ -31,7 +31,7 @@
 		></script>
 
 		<!-- 커스텀 css, js -->
-        <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
+		<script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
 		<link rel="stylesheet" href="../../css/common.css" />
 		<script src="../../nav.js" type="module" defer></script>
 		<link rel="stylesheet" href="userinfo.css" />
@@ -56,11 +56,13 @@
 						<span class="sidebar-text">Menu</span>
 					</div>
 					<div class="l-navbar" id="categoryNavbar">
+						<nav class="navbox">
+							<div class="nav__brand">
+								<div class="nav__brand">Category</div>
+							</div>
+						</nav>
 						<nav class="nav">
 							<div>
-								<div class="nav__brand">
-									<div class="nav__brand">Category</div>
-								</div>
 								<div class="nav__list" id="nav-list">
 									<div class="nav__link active">
 										<a href="/" class="nav_name">Home</a>
