--- a/src/views/admin/admin.html
+++ b/src/views/admin/admin.html
@@ -108,6 +108,14 @@
             </p>
           </div>
         </a>
+        <a class="menu-card" href="/admin/productList">
+          <div class="menu-body">
+            <p class="title">상품 목록</p>
+            <p class="subtitle">
+              상품 목록 보기 및 상품을 수정 및 삭제 할 수 있습니다.
+            </p>
+          </div>
+        </a>
       </div>
     </section>
   </body>
