products css 수정

--- a/src/views/products/products.html
+++ b/src/views/products/products.html
@@ -86,10 +86,11 @@
 					</div>
 				</div>
 			</div>
+			<div id="currentPage"></div>
 		</header>
 
 		<section class="rankedproducts" id="rankedproducts">
-			<div id="currentPage"></div>
+			<div class="current-title" id="currentTitle"></div>
 			<div class="inputProduct" id="inputProduct"></div>
 		</section>
 
