--- a/src/views/css/common.css
+++ b/src/views/css/common.css
@@ -9,6 +9,9 @@ body {
 	position: relative;
 	margin: 0;
 	font-size: 62.5%;
+	font-family: 'Nanum Gothic', sans-serif;
+	color: #141414;
+	font-weight: 400;
 }
 
 h1 {
@@ -59,7 +62,7 @@ header {
 	height: 1.5rem;
 	align-items: flex-end;
 	font-size: 12px;
-	margin-right: 2.4%;
+	margin-right: calc(2.4% - 10px);
 }
 .navbar > li {
 	position: relative;
@@ -116,7 +119,7 @@ header {
 	font-size: 26px;
 	cursor: pointer;
 	position: absolute;
-	top: 2.7rem;
+	top: 2.8rem;
 	left: 2%;
 	padding-right: 52px;
 }
