--- a/src/views/products/products.css
+++ b/src/views/products/products.css
@@ -1,6 +1,3 @@
-#currentPage {
-	display: flex;
-}
 .inputProduct {
 	display: flex;
 	width: 100%;
@@ -36,7 +33,7 @@
 	text-align: center;
 	cursor: pointer;
 	margin-top: 1.25rem;
-	width: 100%;
+	width: 97%;
 	color: #141414;
 	font-weight: 400;
 	font-family: 'Nanum Gothic', sans-serif;
@@ -60,5 +57,19 @@
 .price {
 	margin-top: 0.4rem;
 	font-size: 13px;
+	font-weight: 700;
+}
+/* currentPage  */
+#currentPage {
+	margin-right: 2.4%;
+	padding: 1rem 0 1rem 2.4%;
+	font-size: 12px;
+	border-top: 1px solid #e5e5e5;
+}
+.topCategory {
+	display: inline-block;
+}
+.subCategory {
+	display: inline-block;
 	font-weight: 700;
 }
