배송변경 DB전송 전

--- a/src/views/orderList/orderList.html
+++ b/src/views/orderList/orderList.html
@@ -93,15 +93,14 @@
 				<div class="orderTable">
 					<div class="orderTableRowGroup">
 						<div class="orderTableTitle">
-							<!-- - orderId, timeKor, buyer, product, priceSum, deliveryStatus -->
-							<!-- - 주문취소버튼 추가 -->
 							<div class="orderTableCell" id="orderInfo">주문번호</div>
 							<div class="orderTableCell" id="orderDate">날짜</div>
 							<div class="orderTableCell" id="orderProduct">구매자</div>
 							<div class="orderTableCell" id="orderProduct">구매상품</div>
 							<div class="orderTableCell" id="orderPriceSum">주문금액</div>
 							<div class="orderTableCell" id="orderState">배송상태</div>
-							<div class="orderTableCell">비고</div>
+							<div class="orderTableCell" id="changeOrderState">배송상태변경</div>
+							<div class="orderTableCell">주문취소</div>
 						</div>
 					</div>
 				</div>
