new 카테고리 추가

--- a/src/views/newproducts/newproducts.html
+++ b/src/views/newproducts/newproducts.html
@@ -89,13 +89,16 @@
 				</div>
 			</div>
 			<div id="currentPage">
-				<a href="/products/ranking" class="topCategory" style="font-weight: 700"
-					>Best</a
+				<a
+					href="/products/newproducts"
+					class="topCategory"
+					style="font-weight: 700"
+					>New</a
 				>
 			</div>
 		</header>
 
-		<section class="rankedproducts" id="rankedproducts">
+		<section class="newestproducts" id="newestproducts">
 			<div class="inputProduct" id="inputProduct"></div>
 		</section>
 
