--- a/src/views/products/products.html
+++ b/src/views/products/products.html
@@ -67,6 +67,9 @@
 									<div class="nav__link active">
 										<a href="/ranking" class="nav_name">Best</a>
 									</div>
+									<div class="nav__link active">
+										<a href="/newproducts" class="nav_name">New</a>
+									</div>
 								</div>
 							</div>
 						</nav>
