--- a/src/views/productsList/productsList.html
+++ b/src/views/productsList/productsList.html
@@ -12,11 +12,11 @@
 			sizes="32x32"
 			href="/StoreStore-favicon.png"
 		/>
-    <script
-    defer
-    src="https://kit.fontawesome.com/7630448495.js"
-    crossorigin="anonymous"
-    ></script>
+		<script
+			defer
+			src="https://kit.fontawesome.com/7630448495.js"
+			crossorigin="anonymous"
+		></script>
 		<!-- sweetalert -->
 		<script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
 
@@ -76,6 +76,9 @@
 									<div class="nav__link active">
 										<a href="/ranking" class="nav_name">Best</a>
 									</div>
+									<div class="nav__link active">
+										<a href="/newproducts" class="nav_name">New</a>
+									</div>
 								</div>
 							</div>
 						</nav>
@@ -103,14 +106,13 @@
 					<div class="tit-box">
 						<p class="product-id-cell">상품 아이디</p>
 						<p class="product-name-cell">상품 명</p>
-            <p class="product-category-cell">카테고리</p>
+						<p class="product-category-cell">카테고리</p>
 						<p class="product-price-cell">상품 금액</p>
-            <p class="product-amount-cell">상품 수량</p>
-            <p class="product-sales-cell">판매량</p>
-            <p class="product-company-cell">제조사</p>
-            <p class="update-del-btn-cell">수정</p>
+						<p class="product-amount-cell">상품 수량</p>
+						<p class="product-sales-cell">판매량</p>
+						<p class="product-company-cell">제조사</p>
+						<p class="update-del-btn-cell">수정</p>
 					</div>
-          
 				</div>
 			</div>
 		</section>
