이미지 div 오류

--- a/src/views/newproducts/newproducts.html
+++ b/src/views/newproducts/newproducts.html
@@ -29,9 +29,9 @@
 		></script>
 
 		<!-- 커스텀 css, js -->
-		<link rel="stylesheet" href="../ranking/ranking.css" />
+		<link rel="stylesheet" href="./newproducts.css" />
 		<link rel="stylesheet" href="../css/common.css" />
-		<script src="../ranking/ranking.js" type="module" defer></script>
+		<script src="./newproducts.js" type="module" defer></script>
 		<script src="../nav.js" type="module" defer></script>
 	</head>
 	<body>
@@ -98,7 +98,7 @@
 			</div>
 		</header>
 
-		<section class="newestproducts" id="newestproducts">
+		<section class="inputNewestproduct" id="inputNewestproduct">
 			<div class="inputProduct" id="inputProduct"></div>
 		</section>
 
