--- a/src/views/products/products.css
+++ b/src/views/products/products.css
@@ -59,6 +59,15 @@
 	font-size: 13px;
 	font-weight: 700;
 }
+.nullcategory {
+	display: block;
+	width: 100%;
+	height: auto;
+	padding: 100px 0;
+	font-weight: 700;
+	font-size: 14px;
+	text-align: center;
+}
 /* currentPage  */
 #currentPage {
 	margin-right: 2.4%;
