--- a/src/views/order/order.html
+++ b/src/views/order/order.html
@@ -110,10 +110,10 @@
 			</div>
 		</section>
 		<!-- 상세보기 modal 창 -->
-		<div class="modal_background">
+		<div class="modalBackground">
 			<div class="modal" tabindex="-1" role="dialog">
 				<div
-					class="modal-dialog"
+					class="modalDialog"
 					style="
 						overflow-y: scroll;
 						max-height: 85%;
@@ -121,32 +121,32 @@
 						margin-bottom: 50px;
 					"
 				>
-					<div class="modal-content">
-						<div class="modal-header">
-							<h3 class="modal-title">상세보기</h3>
+					<div class="modalContent">
+						<div class="modalHeader">
+							<h3 class="modalTitle">상세보기</h3>
 						</div>
-						<div class="modal-body">
-							<div class="modal-subtitle">구매날짜</div>
+						<div class="modalBody">
+							<div class="modalSubtitle">구매날짜</div>
 							<div class="modalOrderDate"></div>
-							<div class="modal-subtitle">주문번호</div>
+							<div class="modalSubtitle">주문번호</div>
 							<div class="modalOrderNumber"></div>
-							<div class="modal-subtitle">구매상품</div>
+							<div class="modalSubtitle">구매상품</div>
 							<div class="modalOrderProduct"></div>
-							<div class="modal-subtitle">가격</div>
+							<div class="modalSubtitle">가격</div>
 							<div class="modalOrderPriceSum"></div>
-							<div class="modal-subtitle">받는이</div>
+							<div class="modalSubtitle">받는이</div>
 							<div class="modalOrderReceiver"></div>
-							<div class="modal-subtitle">배송지 연락처</div>
+							<div class="modalSubtitle">배송지 연락처</div>
 							<div class="modalOrderPhoneNumber"></div>
-							<div class="modal-subtitle">배송지 주소</div>
+							<div class="modalSubtitle">배송지 주소</div>
 							<div class="modalOrderAddress"></div>
-							<div class="modal-subtitle">요청사항</div>
+							<div class="modalSubtitle">요청사항</div>
 							<div class="modalOrderReqestMsg"></div>
-							<div class="modal-subtitle">배송상태</div>
+							<div class="modalSubtitle">배송상태</div>
 							<div class="modalOrderState"></div>
 						</div>
-						<div class="modal-footer">
-							<button class="close-button">닫기</button>
+						<div class="modalFooter">
+							<button class="closeButton">닫기</button>
 						</div>
 					</div>
 				</div>
