--- a/src/views/order/order.css
+++ b/src/views/order/order.css
@@ -41,7 +41,7 @@
     outline:none;
 }
 
-.modal_background-on{
+.modalBackgroundOn{
     position: fixed;
     top:0; left: 0; bottom: 0; right: 0;
     background: rgba(0, 0, 0, 0.8);
@@ -60,7 +60,7 @@
     width: 800px;
     height: 500px;
 }
-.show-modal {
+.showModal {
     display: block !important;;
     position: fixed;
     top: 20%;
@@ -74,26 +74,26 @@
     height: 550px;
 }
 
-.modal-dialog{
+.modalDialog{
     overflow-y: initial !important
 }
-.modal-body{
+.modalBody{
     align-items: left;
     height: 400px;
     overflow-y: auto;
     padding: 10px 50px 10px 50px;
 }
 
-.modal-title {
+.modalTitle {
     font-size: 24px;
     font-weight: bold;
 }
 
-.modal-subtitle {
+.modalSubtitle {
     font-weight: bold;
 }
 
-.close-button {
+.closeButton {
     /* margin: auto; */
     margin: 10px 10px 10px 10px;
 }
