--- a/src/views/login/login.html
+++ b/src/views/login/login.html
@@ -87,9 +87,9 @@
           로그인하기
         </button>
       </form>
-    </div>
-    <div class="passwordFind-box">
-      <button class="passwordFind">비밀번호 찾기</button>
+      <div class="passwordFind-box">
+        <button id="passwordFind">비밀번호 찾기</button>
+      </div>
     </div>
   </body>
 </html>
