--- a/src/views/register/register.html
+++ b/src/views/register/register.html
@@ -72,7 +72,7 @@
 								autocomplete="on"
 							/>
 						</div>
-						<div class="failname-message hide">
+						<div class="fail-message hide" id="failname-message">
 							이름은 2글자 이상이어야 합니다.
 						</div>
 					</div>
@@ -88,7 +88,7 @@
 								autocomplete="on"
 							/>
 						</div>
-						<div class="failemail-message hide">이메일 형식이 맞지 않습니다.</div>
+						<div class="fail-message hide" id="failemail-message">이메일 형식이 맞지 않습니다.</div>
 						<div class="success-message hide">이메일 인증이 완료되었습니다.</div>
 						<button id="send-email-button" class="btn btn--gray">인증요청</button>
 					</div>
@@ -104,7 +104,7 @@
 								autocomplete="off"
 							/>
 						</div>
-						<div class="failpass-message hide">
+						<div class="fail-message hide" id="failpass-message">
 							비밀번호는 4글자 이상이어야 합니다.
 						</div>
 					</div>
@@ -120,7 +120,7 @@
 								autocomplete="off"
 							/>
 						</div>
-						<div class="misspass-message hide">비밀번호가 일치하지 않습니다</div>
+						<div class="fail-message hide" id="misspass-message">비밀번호가 일치하지 않습니다</div>
 					</div>
 				</div>
 
