--- a/src/views/signout/signout.html
+++ b/src/views/signout/signout.html
@@ -98,15 +98,15 @@
 
     <!-- 삭제 폼 -->
     <div class="register-user-form-container">
-        <form action="" class="box register-user-form-box" id="registerUserForm">
-            <p class="title">삭제를 진행합니다.</p>
-            <div>
+        <form class="register-user-form-box" id="registerUserForm">
+            <p>회원 탈퇴</p>
+            <div class="inner">
                 <label for="passwordInput" class="label">현재 비밀번호</label>
                 <div class="control">
                     <input type="password" class="input" id="passwordInput" placeholder="비밀번호를 입력해 주세요." autocomplete="off">
                 </div>
             </div>
-            <input type="submit" class="button" id="submitButton" value="회원정보 안전하게 삭제하기"></input>
+            <input type="submit" class="btn" id="submitButton" value="회원정보 안전하게 삭제하기"></input>
             <!-- 회원정보를 정말 삭제할 지 묻는 Modal 창 -->
             
         </form>
