--- a/src/views/userinfo/userinfo.css
+++ b/src/views/userinfo/userinfo.css
@@ -1,8 +1,100 @@
-.form-container {
-    justify-content: center;
-    /* align-items: center; */
+body {
+	font-family: 'Nanum Gothic', sans-serif;
+}
+.section {
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	padding: 0 35%;
+}
+
+.container {
+	width: 30rem;
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+}
+
+.container > h1 {
+	font-size: 20px;
+	font-weight: 700;
+	display: inline-block;
+	width: 100%;
+	text-align: center;
+	border-bottom: 1px solid #e5e5e5;
+	padding: 4rem 0 2rem;
+	margin: 0 0 1.5rem;
+}
+.menu-container {
+	width: 100%;
+}
+.field {
+	width: 100%;
 }
 
 .label {
-font-weight: bold;
+	font-size: 12px;
+}
+
+.control {
+	padding: 0.5rem 0;
+}
+
+.input {
+	width: 100%;
+	border: 1px solid #e5e5e5;
+	padding: 0 1rem;
+	height: 2.3rem;
+	line-height: 2.3rem;
+}
+
+.input:focus {
+	outline: none !important;
+	border: 1px solid #141414;
+	background-color: #fff;
+}
+input:-webkit-autofill {
+	-webkit-box-shadow: 0 0 0 1000px #fff inset;
+}
+.login-form > .btn {
+	max-width: 100%;
+	min-width: 100%;
+	margin: 1.5rem 0;
+}
+#updatePasswordButton {
+	display: block;
+	margin: 0.5rem 0 0;
+}
+.swal-modal {
+	border-radius: 0%;
+}
+.swal-text {
+	font-size: 14px;
+	font-family: 'Nanum Gothic', sans-serif;
+	color: #141414;
+}
+.swal-footer {
+	text-align: center;
+}
+.swal-button {
+	max-width: 20rem;
+	border: 1px solid #141414;
+	background-color: #fff;
+	padding: 0 3.2rem;
+	text-transform: capitalize;
+	text-align: center;
+	display: inline-block;
+	color: #141414;
+	font-size: 13px;
+	transition: 0.3s;
+	height: 2.3rem;
+	line-height: 2.3rem;
+	cursor: pointer;
+	box-sizing: border-box;
+	white-space: nowrap;
+	border-radius: 0%;
+}
+.swal-button:hover {
+	background-color: #141414;
+	color: #fff;
 }
