비밀번호 코드 복구

--- a/src/views/login/login.html
+++ b/src/views/login/login.html
@@ -83,7 +83,9 @@
               />
             </div>
           </div>
-          <button class="passwordFind">비밀번호 찾기</button>
+          <div class="passwordFind-box">
+            <button id="passwordFind">비밀번호 찾기</button>
+          </div>
         </div>
 
         <button class="btn" id="submitButton">
