--- a/src/views/login/login.css
+++ b/src/views/login/login.css
@@ -53,7 +53,7 @@
 input:-webkit-autofill {
 	-webkit-box-shadow: 0 0 0 1000px #fff inset;
 }
-.passwordFind {
+#passwordFind {
 	border: none;
 	background-color: #fff;
 	font-size: 12px;
@@ -97,7 +97,9 @@ input:-webkit-autofill {
 	white-space: nowrap;
 	border-radius: 0%;
 }
-.swal-button:hover {
-	background-color: #141414;
-	color: #fff;
+.swal-content__input {
+	border: 1px solid #e5e5e5;
+}
+.swal-content__input:focus {
+	border: 1px solid #141414;
 }
