--- a/src/views/payment/payment.html
+++ b/src/views/payment/payment.html
@@ -165,13 +165,11 @@
                       <option>부재 시 택배함에 넣어주세요.</option>
                       <option>직접 입력</option>
                     </select>
-                  </div>
-                  <div class="field-body">
-                    <div>
-                      <input type="text" id="writeOption">
-                    </div>
-                    <div>
-                      <button id="writeOptionSaveButton">저장</button>
+                    <div class="inputTextnButton">
+                      <div>
+                        <input type="text" id="writeOption">
+                        <button id="writeOptionSaveButton">저장</button>
+                      </div>
                     </div>
                   </div>
                 </div>
