--- a/src/views/css/common.css
+++ b/src/views/css/common.css
@@ -189,7 +189,7 @@ header {
 	font-size: 26px;
 	cursor: pointer;
 	position: absolute;
-	top: 2.8rem;
+	top: 2.7rem;
 	left: 2%;
 	padding-right: 52px;
 }
@@ -290,6 +290,9 @@ header {
 .nav_name {
 	font-size: 14px;
 }
+.nav__toggle {
+	width: 70px;
+}
 
 /* Expander menu */
 .expander {
@@ -341,4 +344,11 @@ header {
 /* logo */
 h1.logo {
 	display: block;
+}
+
+.copyright {
+	padding: 0.5rem;
+	font-size: 12px;
+	letter-spacing: 0.85px;
+	text-align: center;
 }
