--- a/src/views/home/home.html
+++ b/src/views/home/home.html
@@ -107,36 +107,7 @@
 
 			<article class="products">
 				<div class="swiper mySwiper">
-					<div class="swiper-wrapper" id="swiper-wrapper">
-						<div class="swiper-slide">
-							<img
-								src="https://images.unsplash.com/photo-1620799140408-edc6dcb6d633?crop=entropy&cs=tinysrgb&fm=jpg&ixlib=rb-1.2.1&q=80&raw_url=true&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1072"
-								alt="예시이미지1"
-							/>
-							<a href="${}" class="btn">${}</a>
-						</div>
-						<div class="swiper-slide">
-							<img
-								src="https://images.unsplash.com/photo-1620799140408-edc6dcb6d633?crop=entropy&cs=tinysrgb&fm=jpg&ixlib=rb-1.2.1&q=80&raw_url=true&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1072"
-								alt="예시이미지1"
-							/>
-							<a href="${}" class="btn">${}</a>
-						</div>
-						<div class="swiper-slide">
-							<img
-								src="https://images.unsplash.com/photo-1620799140408-edc6dcb6d633?crop=entropy&cs=tinysrgb&fm=jpg&ixlib=rb-1.2.1&q=80&raw_url=true&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1072"
-								alt="예시이미지1"
-							/>
-							<a href="${}" class="btn">${}</a>
-						</div>
-						<div class="swiper-slide">
-							<img
-								src="https://images.unsplash.com/photo-1620799140408-edc6dcb6d633?crop=entropy&cs=tinysrgb&fm=jpg&ixlib=rb-1.2.1&q=80&raw_url=true&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1072"
-								alt="예시이미지1"
-							/>
-							<a href="${}" class="btn">${}</a>
-						</div>
-					</div>
+					<div class="swiper-wrapper" id="swiper-wrapper"></div>
 				</div>
 				<div class="swiper-button-next"></div>
 				<div class="swiper-button-prev"></div>
@@ -154,5 +125,10 @@
 		<div id="to-top">
 			<ion-icon name="chevron-up-outline"></ion-icon>
 		</div>
+
+		<footer>
+			<img src="../StoreStore-favicon.png" alt="logo" />
+			<p class="copyright">Copyright © 2022 StoreStore - All Rights Reserved</p>
+		</footer>
 	</body>
 </html>
