인피니티 스크롤 최신순 구현 + 랭킹, 최신순에서 top올라가기 버튼 추가"

--- a/src/views/ranking/ranking.html
+++ b/src/views/ranking/ranking.html
@@ -96,8 +96,14 @@
 		</header>
 
 		<section class="rankedproducts" id="rankedproducts">
-			<div class="inputProduct" id="inputProduct"></div>
+			<div class="inputProduct" id="inputProduct">
+				<div id="loading-box"><div class="lds-ring"><div></div></div></div>
+			</div>
 		</section>
+
+		<div id="to-top">
+			<ion-icon name="chevron-up-outline"></ion-icon>
+		</div>
 
 		<footer>footer</footer>
 	</body>
