--- a/src/views/newproducts/newproducts.html
+++ b/src/views/newproducts/newproducts.html
@@ -99,8 +99,14 @@
 		</header>
 
 		<section class="inputNewestproduct" id="inputNewestproduct">
-			<div class="inputProduct" id="inputProduct"></div>
+			<div class="inputProduct" id="inputProduct">
+				<div id="loading-box"><div class="lds-ring"><div></div></div></div>
+			</div>
 		</section>
+
+		<div id="to-top">
+			<ion-icon name="chevron-up-outline"></ion-icon>
+		</div>
 
 		<footer>footer</footer>
 	</body>
