--- a/src/views/newproducts/newproducts.css
+++ b/src/views/newproducts/newproducts.css
@@ -48,7 +48,7 @@
 	width: 97%;
 	color: #141414;
 	font-weight: 400;
-	font-family: 'Nanum Gothic', sans-serif;
+	font-family: 'Noto Sans KR', sans-serif;
 }
 #seller {
 	overflow: hidden;
