--- a/src/views/userinfo/userinfo.css
+++ b/src/views/userinfo/userinfo.css
@@ -1,5 +1,5 @@
 body {
-	font-family: 'Nanum Gothic', sans-serif;
+	font-family: 'Noto Sans KR', sans-serif;
 }
 .section {
 	display: flex;
@@ -64,37 +64,4 @@ input:-webkit-autofill {
 #updatePasswordButton {
 	display: block;
 	margin: 0.5rem 0 0;
-}
-.swal-modal {
-	border-radius: 0%;
-}
-.swal-text {
-	font-size: 14px;
-	font-family: 'Nanum Gothic', sans-serif;
-	color: #141414;
-}
-.swal-footer {
-	text-align: center;
-}
-.swal-button {
-	max-width: 20rem;
-	border: 1px solid #141414;
-	background-color: #fff;
-	padding: 0 3.2rem;
-	text-transform: capitalize;
-	text-align: center;
-	display: inline-block;
-	color: #141414;
-	font-size: 13px;
-	transition: 0.3s;
-	height: 2.3rem;
-	line-height: 2.3rem;
-	cursor: pointer;
-	box-sizing: border-box;
-	white-space: nowrap;
-	border-radius: 0%;
-}
-.swal-button:hover {
-	background-color: #141414;
-	color: #fff;
 }
