--- a/src/views/product-detail/product-detail.css
+++ b/src/views/product-detail/product-detail.css
@@ -1,113 +1,96 @@
-.header-search-input {
-	width: 20rem;
+.section.product-section > .container {
+	display: flex;
+	height: 30rem;
+	justify-content: center;
+	margin: 0 0 5rem;
 }
-.navbar-menu .is-info:focus {
-	box-shadow: none;
-	outline: none;
+.productImageTag {
+	height: 100%;
+	margin-right: 3rem;
 }
-.product-detail-card .product-image {
-	padding: 0;
-}
-.product-detail-card .box {
-	box-shadow: none;
-	max-width: 100%;
+.vertical {
+	display: flex;
+	flex-direction: column;
+	justify-content: space-between;
+	padding: 2rem 0 0;
 }
 .product-detail {
-	margin-bottom: 0;
-	padding-bottom: 0;
+	font-size: 14px;
 }
-.product-detail .tag {
-	display: inline-block;
-	line-height: 1.5rem;
-	margin-bottom: 1rem;
-	margin-left: 0.5rem;
+.priceTag {
+	padding-bottom: 1.5rem;
+	border-bottom: 1px solid #e5e5e5;
+}
+.subtitle {
+	font-size: 18px;
+	font-weight: 700;
+	margin: 1rem 0 0.6rem;
 }
 .detail-description {
-	margin-top: 2rem;
-	white-space: pre-line;
+	margin: 1.5rem 0;
 }
-.buttons-container {
-	flex-grow: 0;
-	padding-bottom: 0;
-	padding-right: 0;
+.buttons-container > .btn {
+	margin: 0 0.2rem;
+	font-weight: 700;
 }
-.buttons-container button {
-	font-size: 1.3rem;
-	font-weight: 800;
-	height: 4rem;
-	padding: 0;
-	width: 48%;
-}
-.buttons-container button.is-warning {
-	line-height: 3rem;
-	padding-top: 0.3rem;
-}
-.content p:not(:last-child) {
-	margin-bottom: 0.5rem;
-}
-.content h1:not(:first-child) {
-	margin-top: 0;
-}
-@media only screen and (max-width: 500px) {
-	.product-detail-card.buttons-container button {
-		font-size: 1.3rem;
-		font-weight: 800;
-		height: 4rem;
-		margin: 0.3rem;
-		margin-left: 0 !important;
-		padding: 0;
-		width: 90%;
-	}
-}
-
 /* commentForm Css */
-.comment-box{
+.comment-section {
+	width: 60rem;
+	margin: auto;
+}
+.comment-section > .container {
+	border-top: 1px solid #e5e5e5;
+	padding: 2rem 0;
+}
+.comment-box {
 	display: flex;
 	width: 100%;
 	flex-direction: row;
 	justify-content: center;
 	align-content: center;
-	height: 40px;
+	height: 2.3rem;
+	line-height: 2.3rem;
 }
 
 .comment-input {
 	width: 100%;
 	appearance: none;
-	border: 0;
-	border-left: 3px solid transparent;
-	background-color: #EEE;
-	padding: 10px 10px 10px 32px;
-	transition: .65s ease;
-}
-.comment-input:focus{
-	border-color: orange;
+	border: 1px solid #e5e5e5;
 	background-color: #fff;
+	padding: 10px;
+}
+.comment-input:focus {
+	outline: none !important;
+	border: 1px solid #141414;
+	background-color: #fff;
+}
+.comment-input:-webkit-autofill {
+	-webkit-box-shadow: 0 0 0 1000px #fff inset;
 }
 .comment-btn {
 	appearance: none;
+	border: 1px solid #141414;
 	background-color: #fff;
-	font-size: 18px;
+	font-size: 13px;
 	text-decoration: none;
-	color: orange;
 	padding: 0 32px;
-	line-height: 1.5;
 	transition: 0.65s ease;
+	font-weight: 700;
 }
-.comment-btn:active{
+.comment-btn:active {
 	border: 0;
 }
-.comment-btn:hover{
-	background-color: orange;
-		color: #fff;
+.comment-btn:hover {
+	background-color: #141414;
+	color: #fff;
 }
-.comment-btn:hover + .comment-input{
-	background-color: #fff;
-		border-color: orange;
+.comment-btn:hover + .comment-input {
+	background-color: #141414;
+	color: #fff;
 }
 
-.star-rate{
-	
-	font-size: 20px;
+.star-rate {
+	font-size: 22px;
 	display: flex;
 	align-items: center;
 	gap: 10px;
@@ -115,110 +98,112 @@
 }
 
 .rating {
-  display: flex;
-  justify-content: center;
-  overflow: hidden;
-  flex-direction: row-reverse;
-  position: relative;
+	display: flex;
+	justify-content: center;
+	overflow: hidden;
+	flex-direction: row-reverse;
+	position: relative;
 }
 
 .rating-0 {
-  filter: grayscale(100%);
+	filter: grayscale(100%);
 }
 
 .rating > input {
-  display: none;
+	display: none;
 }
 
 .rating > label {
-  cursor: pointer;
-  width: 30px;
-  height: 30px;
-  margin-top: auto;
-  background-image: url("data:image/svg+xml;charset=UTF-8,%3csvg xmlns='http://www.w3.org/2000/svg' width='126.729' height='126.73'%3e%3cpath fill='%23e3e3e3' d='M121.215 44.212l-34.899-3.3c-2.2-.2-4.101-1.6-5-3.7l-12.5-30.3c-2-5-9.101-5-11.101 0l-12.4 30.3c-.8 2.1-2.8 3.5-5 3.7l-34.9 3.3c-5.2.5-7.3 7-3.4 10.5l26.3 23.1c1.7 1.5 2.4 3.7 1.9 5.9l-7.9 32.399c-1.2 5.101 4.3 9.3 8.9 6.601l29.1-17.101c1.9-1.1 4.2-1.1 6.1 0l29.101 17.101c4.6 2.699 10.1-1.4 8.899-6.601l-7.8-32.399c-.5-2.2.2-4.4 1.9-5.9l26.3-23.1c3.8-3.5 1.6-10-3.6-10.5z'/%3e%3c/svg%3e");
-  background-repeat: no-repeat;
-  background-position: center;
-  background-size: 76%;
-  transition: .3s;
+	cursor: pointer;
+	width: 28px;
+	height: 30px;
+	margin-top: auto;
+	background-image: url("data:image/svg+xml;charset=UTF-8,%3csvg xmlns='http://www.w3.org/2000/svg' width='126.729' height='126.73'%3e%3cpath fill='%23e3e3e3' d='M121.215 44.212l-34.899-3.3c-2.2-.2-4.101-1.6-5-3.7l-12.5-30.3c-2-5-9.101-5-11.101 0l-12.4 30.3c-.8 2.1-2.8 3.5-5 3.7l-34.9 3.3c-5.2.5-7.3 7-3.4 10.5l26.3 23.1c1.7 1.5 2.4 3.7 1.9 5.9l-7.9 32.399c-1.2 5.101 4.3 9.3 8.9 6.601l29.1-17.101c1.9-1.1 4.2-1.1 6.1 0l29.101 17.101c4.6 2.699 10.1-1.4 8.899-6.601l-7.8-32.399c-.5-2.2.2-4.4 1.9-5.9l26.3-23.1c3.8-3.5 1.6-10-3.6-10.5z'/%3e%3c/svg%3e");
+	background-repeat: no-repeat;
+	background-position: center;
+	background-size: 76%;
+	transition: 0.3s;
 }
 
 .rating > input:checked ~ label,
 .rating > input:checked ~ label ~ label {
-  background-image: url("data:image/svg+xml;charset=UTF-8,%3csvg xmlns='http://www.w3.org/2000/svg' width='126.729' height='126.73'%3e%3cpath fill='%23fcd93a' d='M121.215 44.212l-34.899-3.3c-2.2-.2-4.101-1.6-5-3.7l-12.5-30.3c-2-5-9.101-5-11.101 0l-12.4 30.3c-.8 2.1-2.8 3.5-5 3.7l-34.9 3.3c-5.2.5-7.3 7-3.4 10.5l26.3 23.1c1.7 1.5 2.4 3.7 1.9 5.9l-7.9 32.399c-1.2 5.101 4.3 9.3 8.9 6.601l29.1-17.101c1.9-1.1 4.2-1.1 6.1 0l29.101 17.101c4.6 2.699 10.1-1.4 8.899-6.601l-7.8-32.399c-.5-2.2.2-4.4 1.9-5.9l26.3-23.1c3.8-3.5 1.6-10-3.6-10.5z'/%3e%3c/svg%3e");
+	background-image: url("data:image/svg+xml;charset=UTF-8,%3csvg xmlns='http://www.w3.org/2000/svg' width='126.729' height='126.73'%3e%3cpath fill='%23fcd93a' d='M121.215 44.212l-34.899-3.3c-2.2-.2-4.101-1.6-5-3.7l-12.5-30.3c-2-5-9.101-5-11.101 0l-12.4 30.3c-.8 2.1-2.8 3.5-5 3.7l-34.9 3.3c-5.2.5-7.3 7-3.4 10.5l26.3 23.1c1.7 1.5 2.4 3.7 1.9 5.9l-7.9 32.399c-1.2 5.101 4.3 9.3 8.9 6.601l29.1-17.101c1.9-1.1 4.2-1.1 6.1 0l29.101 17.101c4.6 2.699 10.1-1.4 8.899-6.601l-7.8-32.399c-.5-2.2.2-4.4 1.9-5.9l26.3-23.1c3.8-3.5 1.6-10-3.6-10.5z'/%3e%3c/svg%3e");
 }
-
 
 .rating > input:not(:checked) ~ label:hover,
 .rating > input:not(:checked) ~ label:hover ~ label {
-  background-image: url("data:image/svg+xml;charset=UTF-8,%3csvg xmlns='http://www.w3.org/2000/svg' width='126.729' height='126.73'%3e%3cpath fill='%23d8b11e' d='M121.215 44.212l-34.899-3.3c-2.2-.2-4.101-1.6-5-3.7l-12.5-30.3c-2-5-9.101-5-11.101 0l-12.4 30.3c-.8 2.1-2.8 3.5-5 3.7l-34.9 3.3c-5.2.5-7.3 7-3.4 10.5l26.3 23.1c1.7 1.5 2.4 3.7 1.9 5.9l-7.9 32.399c-1.2 5.101 4.3 9.3 8.9 6.601l29.1-17.101c1.9-1.1 4.2-1.1 6.1 0l29.101 17.101c4.6 2.699 10.1-1.4 8.899-6.601l-7.8-32.399c-.5-2.2.2-4.4 1.9-5.9l26.3-23.1c3.8-3.5 1.6-10-3.6-10.5z'/%3e%3c/svg%3e");
+	background-image: url("data:image/svg+xml;charset=UTF-8,%3csvg xmlns='http://www.w3.org/2000/svg' width='126.729' height='126.73'%3e%3cpath fill='%23d8b11e' d='M121.215 44.212l-34.899-3.3c-2.2-.2-4.101-1.6-5-3.7l-12.5-30.3c-2-5-9.101-5-11.101 0l-12.4 30.3c-.8 2.1-2.8 3.5-5 3.7l-34.9 3.3c-5.2.5-7.3 7-3.4 10.5l26.3 23.1c1.7 1.5 2.4 3.7 1.9 5.9l-7.9 32.399c-1.2 5.101 4.3 9.3 8.9 6.601l29.1-17.101c1.9-1.1 4.2-1.1 6.1 0l29.101 17.101c4.6 2.699 10.1-1.4 8.899-6.601l-7.8-32.399c-.5-2.2.2-4.4 1.9-5.9l26.3-23.1c3.8-3.5 1.6-10-3.6-10.5z'/%3e%3c/svg%3e");
 }
 
-#comment-form{
+#comment-form {
 	display: flex;
 	flex-direction: column;
 	align-items: flex-start;
 }
-.comment-list{
-	background-color: #f5f5f5;
+.comment-list {
+	border-bottom: 1px solid #e5e5e5;
+	margin-top: 2rem;
 }
 
-.comment-item-box{
+.comment-item-box {
 	font-size: 16px;
 	display: flex;
-	align-items: center;
-	padding: 10px 5px;
-	margin: 30px 10px;
+	flex-direction: column;
+	align-items: flex-start;
+	padding: 1rem 0;
 	justify-content: space-between;
 }
 
-
 .rating-item {
 	margin: 0 20px;
-  display: flex;
-  justify-content: center;
-  overflow: hidden;
-  flex-direction: row-reverse;
-  position: relative;
+	display: flex;
+	justify-content: center;
+	overflow: hidden;
+	flex-direction: row-reverse;
+	position: relative;
 }
 
 .rating-0 {
-  filter: grayscale(100%);
+	filter: grayscale(100%);
 }
 
 .rating-item > input {
-  display: none;
+	display: none;
 }
 
 .rating-item > label {
-  width: 30px;
-  height: 30px;
-  margin-top: auto;
-  background-image: url("data:image/svg+xml;charset=UTF-8,%3csvg xmlns='http://www.w3.org/2000/svg' width='126.729' height='126.73'%3e%3cpath fill='%23e3e3e3' d='M121.215 44.212l-34.899-3.3c-2.2-.2-4.101-1.6-5-3.7l-12.5-30.3c-2-5-9.101-5-11.101 0l-12.4 30.3c-.8 2.1-2.8 3.5-5 3.7l-34.9 3.3c-5.2.5-7.3 7-3.4 10.5l26.3 23.1c1.7 1.5 2.4 3.7 1.9 5.9l-7.9 32.399c-1.2 5.101 4.3 9.3 8.9 6.601l29.1-17.101c1.9-1.1 4.2-1.1 6.1 0l29.101 17.101c4.6 2.699 10.1-1.4 8.899-6.601l-7.8-32.399c-.5-2.2.2-4.4 1.9-5.9l26.3-23.1c3.8-3.5 1.6-10-3.6-10.5z'/%3e%3c/svg%3e");
-  background-repeat: no-repeat;
-  background-position: center;
-  background-size: 76%;
-  transition: .3s;
+	width: 24px;
+	height: 24px;
+	margin-top: auto;
+	background-image: url("data:image/svg+xml;charset=UTF-8,%3csvg xmlns='http://www.w3.org/2000/svg' width='126.729' height='126.73'%3e%3cpath fill='%23e3e3e3' d='M121.215 44.212l-34.899-3.3c-2.2-.2-4.101-1.6-5-3.7l-12.5-30.3c-2-5-9.101-5-11.101 0l-12.4 30.3c-.8 2.1-2.8 3.5-5 3.7l-34.9 3.3c-5.2.5-7.3 7-3.4 10.5l26.3 23.1c1.7 1.5 2.4 3.7 1.9 5.9l-7.9 32.399c-1.2 5.101 4.3 9.3 8.9 6.601l29.1-17.101c1.9-1.1 4.2-1.1 6.1 0l29.101 17.101c4.6 2.699 10.1-1.4 8.899-6.601l-7.8-32.399c-.5-2.2.2-4.4 1.9-5.9l26.3-23.1c3.8-3.5 1.6-10-3.6-10.5z'/%3e%3c/svg%3e");
+	background-repeat: no-repeat;
+	background-position: center;
+	background-size: 76%;
+	transition: 0.3s;
 }
 
 .rating-item > input:checked ~ label,
 .rating-item > input:checked ~ label ~ label {
-  background-image: url("data:image/svg+xml;charset=UTF-8,%3csvg xmlns='http://www.w3.org/2000/svg' width='126.729' height='126.73'%3e%3cpath fill='%23fcd93a' d='M121.215 44.212l-34.899-3.3c-2.2-.2-4.101-1.6-5-3.7l-12.5-30.3c-2-5-9.101-5-11.101 0l-12.4 30.3c-.8 2.1-2.8 3.5-5 3.7l-34.9 3.3c-5.2.5-7.3 7-3.4 10.5l26.3 23.1c1.7 1.5 2.4 3.7 1.9 5.9l-7.9 32.399c-1.2 5.101 4.3 9.3 8.9 6.601l29.1-17.101c1.9-1.1 4.2-1.1 6.1 0l29.101 17.101c4.6 2.699 10.1-1.4 8.899-6.601l-7.8-32.399c-.5-2.2.2-4.4 1.9-5.9l26.3-23.1c3.8-3.5 1.6-10-3.6-10.5z'/%3e%3c/svg%3e");
+	background-image: url("data:image/svg+xml;charset=UTF-8,%3csvg xmlns='http://www.w3.org/2000/svg' width='126.729' height='126.73'%3e%3cpath fill='%23fcd93a' d='M121.215 44.212l-34.899-3.3c-2.2-.2-4.101-1.6-5-3.7l-12.5-30.3c-2-5-9.101-5-11.101 0l-12.4 30.3c-.8 2.1-2.8 3.5-5 3.7l-34.9 3.3c-5.2.5-7.3 7-3.4 10.5l26.3 23.1c1.7 1.5 2.4 3.7 1.9 5.9l-7.9 32.399c-1.2 5.101 4.3 9.3 8.9 6.601l29.1-17.101c1.9-1.1 4.2-1.1 6.1 0l29.101 17.101c4.6 2.699 10.1-1.4 8.899-6.601l-7.8-32.399c-.5-2.2.2-4.4 1.9-5.9l26.3-23.1c3.8-3.5 1.6-10-3.6-10.5z'/%3e%3c/svg%3e");
 }
-
-.comment-item {
-	width: 100%;
+.name-star {
 	display: flex;
-	flex-direction: column;
-	align-items: flex-end;
-	gap: 10px;
 }
-.comment{
+.comment-item-username {
+	margin: 0;
+	font-weight: 700;
+}
+.comment {
 	width: 100%;
-	text-align: end;
 	appearance: none;
 	border: 0;
-	border-left: 3px solid transparent;
-	background-color: #EEE;
-	padding: 10px 3px;
-	transition: .65s ease;
+	background-color: #fff;
+	padding: 0.5rem 0;
+	margin: 1rem 0;
+}
+
+@media (min-width: 320px) and (max-width: 1020px) {
+	.sidebar-text {
+		display: none;
+	}
 }
