--- a/src/views/product-detail/product-detail.html
+++ b/src/views/product-detail/product-detail.html
@@ -14,12 +14,9 @@
     <!-- sweetalert -->
   <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>  
   
-  <link rel="preconnect" href="https://fonts.googleapis.com" />
-		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-		<link
-			href="https://fonts.googleapis.com/css2?family=Libre+Bodoni:wght@400;700&family=Nanum+Gothic:wght@400;700;800&family=Playfair+Display:wght@400;500;600;700;800;900&family=Prata&display=swap"
-			rel="stylesheet"
-		/>
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Libre+Bodoni:wght@400;700&family=Noto+Sans+KR:wght@100;300;400;700&display=swap" rel="stylesheet">
 		<!-- IONICONS -->
 		<script
 			type="module"
@@ -96,35 +93,29 @@
     <!-- 제품 상세 설명 카드 -->
     <section class="section product-section">
       <div class="container">
-        <div class="tile is-ancestor product-detail-card">
-          <div class="tile is-6 is-parent">
-            <div class="tile is-child box product-image">
-              <figure class="image is-sqaure">
-                <img id="productImageTag" src="" />
-              </figure>
+        <div class="product-image">
+          <img id="productImageTag" class="productImageTag" />
+        </div>
+        <div class="vertical">
+          <div class="product-detail">
+            <div class="tabs">
+              <ul>
+                <li id="manufacturerTag"></li>
+              </ul>
+            </div>
+            <div class="content">
+              <p class="subtitle" id="titleTag"></p>
+              <h1 id="priceTag" class="priceTag"></h1>
+              <p class="detail-description" id="detailDescriptionTag"></p>
             </div>
           </div>
-          <div class="tile is-parent is-vertical">
-            <div class="tile is-child box product-detail">
-              <div class="tabs">
-                <ul>
-                  <li id="manufacturerTag"></li>
-                </ul>
-              </div>
-              <div class="content">
-                <p class="subtitle is-3 is-family-monospace" id="titleTag"></p>
-                <h1 id="priceTag"></h1>
-                <p class="detail-description" id="detailDescriptionTag"></p>
-              </div>
-            </div>
-            <div class="tile is-child box buttons-container">
-              <button class="button is-warning" id="addToCartButton">
-                장바구니 추가하기
-              </button>
-              <button class="button is-info ml-2" id="purchaseButton">
-                바로 구매하기
-              </button>
-            </div>
+          <div class="buttons-container">
+            <button class="btn btn--gray" id="addToCartButton">
+              장바구니 추가하기
+            </button>
+            <button class="btn" id="purchaseButton">
+              바로 구매하기
+            </button>
           </div>
         </div>
       </div>
@@ -150,27 +141,27 @@
           </div>
           <div class="comment-box">
             <input type="text" id="comment-input" class="comment-input" placeholder="리뷰를 작성해 주세요">
-            <input type="submit" value="Post" class="comment-btn">
+            <input type="submit" value="등록" class="comment-btn">
           </div>
         </form>
         <div class="comment-list">
           <div class="comment-item-box">
-            <div class="rating-item">
-              <input type="radio" name="rating" id="rating-5" disabled="true">
-              <label></label>
-              <input type="radio" name="rating" id="rating-4" disabled="true">
-              <label></label>
-              <input type="radio" name="rating" id="rating-3" checked="true" disabled="true">
-              <label></label>
-              <input type="radio" name="rating" id="rating-2" disabled="true">
-              <label></label>
-              <input type="radio" name="rating" id="rating-1"  disabled="true">
-              <label></label>
-            </div>
-            <div class="comment-item">
+            <div class="name-star">
               <p class="comment-item-username">이승훈</p>
-              <input class="comment" value="이거 정말 대박입니다." disabled="true"></input>
+              <div class="rating-item">
+                <input type="radio" name="rating" id="rating-5" disabled="true">
+                <label></label>
+                <input type="radio" name="rating" id="rating-4" disabled="true">
+                <label></label>
+                <input type="radio" name="rating" id="rating-3" checked="true" disabled="true">
+                <label></label>
+                <input type="radio" name="rating" id="rating-2" disabled="true">
+                <label></label>
+                <input type="radio" name="rating" id="rating-1"  disabled="true">
+                <label></label>
+              </div>
             </div>
+            <input class="comment" value="이거 정말 대박입니다." disabled="true"></input>
           </div>
         </div>
       </div>
