--- a/src/views/products/products.html
+++ b/src/views/products/products.html
@@ -15,7 +15,7 @@
 		<link rel="preconnect" href="https://fonts.googleapis.com" />
 		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
 		<link
-			href="https://fonts.googleapis.com/css2?family=Libre+Bodoni:wght@400;700&family=Nanum+Gothic:wght@400;700;800&family=Playfair+Display:wght@400;500;600;700;800;900&family=Prata&display=swap"
+			href="https://fonts.googleapis.com/css2?family=Libre+Bodoni:wght@400;700&family=Noto+Sans+KR:wght@100;300;400;700&display=swap"
 			rel="stylesheet"
 		/>
 
@@ -94,7 +94,9 @@
 
 		<section class="rankedproducts" id="rankedproducts">
 			<div class="inputProduct" id="inputProduct">
-				<div id="loading-box"><div class="lds-ring"><div></div></div></div>
+				<div id="loading-box">
+					<div class="lds-ring"><div></div></div>
+				</div>
 			</div>
 		</section>
 
